--- a/Run_Programme.ipynb
+++ b/Run_Programme.ipynb
@@ -14,7 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "id": "7f96f828",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "c91cd530",
    "metadata": {},
    "outputs": [
@@ -897,24 +908,6 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Advanced_Programming\\advanced-programming-mongo\\api\\correlation_analysis.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cleaned_freq_df[\"type\"], uniques = pd.factorize(cleaned_freq_df[\"type\"])\n",
-      "D:\\Advanced_Programming\\advanced-programming-mongo\\api\\correlation_analysis.py:17: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  freq_df_original[\"codes\"] = cleaned_freq_df[\"type\"]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -1010,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d0838bf",
+   "id": "cb7e91cd",
    "metadata": {},
    "outputs": [],
    "source": []
