ipython removed unnecessary whitespace

--- a/Run_Programme.ipynb
+++ b/Run_Programme.ipynb
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7f96f828",
+   "id": "556b8e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c91cd530",
    "metadata": {},
    "outputs": [
@@ -903,14 +903,14 @@
       "                    type  frequency_mhz\n",
       "type           1.000000       0.172089\n",
       "frequency_mhz  0.172089       1.000000 \n",
-      "\n",
-      "max herz is 357.02  and min herz is  27.902\n"
+      "\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "max herz is 357.02  and min herz is  27.902\n",
       "128.25132142857143\n",
       "For data above 100,max herz is 136.525  and min herz is  109.9\n",
       "123.58109523809523\n"
@@ -991,22 +991,6 @@
     "    start_window()\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "432946be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb7e91cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
